Changelog file for MaxCDN component.

MaxCDN 1.0.0
====================================